Added navbar file (templates/header.html), created CSS styling, added navbar class and js, loads navbar with <div id="site-header"></div> <script src="/static/js/header-loader.js" defer></script> under body.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <li><link rel="stylesheet" href="/static/css/style.css"></li>
 </head>
 <body>
+  <div id="site-header"></div>
+  <script src="/static/js/header-loader.js" defer></script>
   <div id="app" class="layout">
     <aside class="sidebar" aria-label="Sidebar">
       <div class="brand">
         <div class="logo">L</div>
-        <div class="title">Landon Devlog</div>
+        <div class="title">Lorum ipsum</div>
       </div>
 
       <div class="search-wrap">
@@ -64,7 +66,7 @@
       <aside class="panel">
         <h3>Quick actions</h3>
         <ul>
-          <li><a href="/blog-template.html">Create new post from template</a></li>
+          <li><a href="/templates/blog-template.html">Create new post from template</a></li>
           <li><a href="/index.html">Deployment instructions</a></li>
         </ul>
       </aside>
