--- a/blogs/setup.html
+++ b/blogs/setup.html
@@ -9,7 +9,7 @@
 <body>
   <div class="single layout">
     <aside class="sidebar">
-      <div class="brand"><div class="logo">L</div><div class="title">Landon Devlog</div></div>
+      <div class="brand"><div class="logo">L</div><div class="title">Lorem ipsum</div></div>
       <nav class="nav">
         <ul>
           <li><a href="/index.html">Home</a></li>
