--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Landon Devlog</title>
+  <title>Tigger.dev</title>
   <li><link rel="icon" href="/static/img/favicon.svg"></li>
   <li><link rel="stylesheet" href="/static/css/style.css"></li>
 </head>
