Add basic sidebar template for preview and testing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <li><link rel="stylesheet" href="/static/css/style.css"></li>
 </head>
 <body>
+  <!-- Template Loaders -->
   <div id="site-header"></div>
   <script src="/static/js/header-loader.js" defer></script>
+  <div id="site-sidebar"></div>
+  <script src="/static/js/sidebar-loader.js" defer></script>
+  
   <div id="app" class="layout">
     <aside class="sidebar" aria-label="Sidebar">
       <div class="brand">
